New --cancel-balance command-line parameter

--- a/docs/greyhole.1
+++ b/docs/greyhole.1
@@ -1,4 +1,4 @@
-.TH greyhole 1  "04/05/2012" "Greyhole %VERSION%" "Greyhole - Redundant Storage Pool using Samba"
+.TH greyhole 1  "12/10/2012" "Greyhole %VERSION%" "Greyhole - Redundant Storage Pool using Samba"
 .SH NAME
 greyhole \- control your Greyhole storage pool
 .SH SYNOPSIS
@@ -28,6 +28,9 @@ Cancel any ongoing or scheduled fsck operations.
 .TP
 \-l, \-\-balance
 Balance available space on storage pool drives.
+.TP
+\-C, \-\-cancel\-balance
+Cancel any ongoing or scheduled balance operations.
 .TP
 \-s, \-\-stats
 Display storage pool statistics.
