--- a/docs/greyhole.1
+++ b/docs/greyhole.1
@@ -141,12 +141,8 @@ your shares.
 .TP
 \-u, \-\-disk\-usage\-report
 Will produce a report of disk usage for your shares.
-The report, saved in /usr/share/greyhole/gh-disk-usage.log, is
-compatible with the
-.B gt5
-tool, which can be used to browse your
-shares, and find what is using the most space.
-There is also a web UI available here:
+The report, saved in /usr/share/greyhole/gh-disk-usage.log,
+can be visualized using a web UI available here:
 \fIhttps://github.com/gboudreau/Greyhole/wiki/How\-to\-visualize\-used\-disk\-space\-in\-your\-storage\-pool\fR
 .RS 7
 The weekly fsck run includes this option, so you should always 
