--- a/docs/greyhole.1
+++ b/docs/greyhole.1
@@ -89,6 +89,11 @@ symlinks found on your shares.
 Delete all metadata files for <path>, which should be a
 share name, followed by the path to a file that is gone
 from your storage pool.
+.TP
+\-U, \-\-remove-share<=share_name>
+Move the files currently inside the specified share from the
+storage pool into the shared folder (landing zone),
+effectively removing the share from Greyhole's storage pool.
 .SH OPTIONS
 .TP
 For \-\-stats and \-\-view-queue, the available OPTIONS are:
@@ -138,21 +143,6 @@ When fsck find metadata files with no file copies, delete those
 metadata files. If the file copies re\-appear later, you'll need
 to run fsck with \-\-find\-orphaned\-files to have them reappear in
 your shares.
-.TP
-\-u, \-\-disk\-usage\-report
-Will produce a report of disk usage for your shares.
-The report, saved in /usr/share/greyhole/gh-disk-usage.log,
-can be visualized using a web UI available here:
-\fIhttps://github.com/gboudreau/Greyhole/wiki/How\-to\-visualize\-used\-disk\-space\-in\-your\-storage\-pool\fR
-.RS 7
-The weekly fsck run includes this option, so you should always 
-have an up-to-date report available for use when you need it.
-.RE 0
-.RS 7
-NOTE: This reports disk usage for every copy of each file. If you
-asked for two copies to be kept, that would mean a 1MB file
-would appear as 2MB in the report.
-.RE 0
 .SH EXAMPLES
 .TP
 Remove a drive from your pool, to later replace it:
