New feature: --pause and --resume to pause and resume the Greyhole daemon process. Useful when you're in the middle of a big fsck and need Greyhole to stop using resources temporarily.

--- a/docs/greyhole.1
+++ b/docs/greyhole.1
@@ -20,6 +20,12 @@ Display this help and exit.
 \-D, \-\-daemon
 Start the daemon.
 .TP
+\-D, \-\-pause
+Pause the daemon.
+.TP
+\-D, \-\-resume
+Resume a paused daemon.
+.TP
 \-f, \-\-fsck
 Schedule a fsck.
 .TP
