Fix for Ubuntu 15 now using systemd instead of Upstart, and samba init.d script being deprecated (now using smbd) in latest Debian and Ubuntu (15)

--- a/DEBIAN/changelog
+++ b/DEBIAN/changelog
@@ -1,5 +1,5 @@
 greyhole (__VERSION__) unstable; urgency=high
 
-  * See http://www.greyhole.net/releases/CHANGELOG for details.
+  * See https://www.greyhole.net/releases/CHANGELOG for details.
 
  -- Guillaume Boudreau <guillaume (at) greyhole.net>  __DATE__
