Changed default memory limit to 512MB; previous (128MB) is causing issues for some people.

--- a/docs/greyhole.conf.5
+++ b/docs/greyhole.conf.5
@@ -378,10 +378,10 @@ This can be higher than the memory_limit set in php.ini.
 If the Greyhole daemon reaches this limit, it will log an error and stop.
 .RE
 .RS 0
-It is NOT advisable to lower the memory limit below 128M.
+It is NOT advisable to lower the memory limit the default.
 .RE
 .RS 0
-Default is \fB128M\fR.
+Default is \fB512M\fR.
 .RE
 .RE
 
