Added documentation about custom copy_method to man page; added example greyhole-custom-cp.sh script in /usr/share/greyhole/

--- a/docs/greyhole.conf.5
+++ b/docs/greyhole.conf.5
@@ -390,11 +390,20 @@ copy_method
 .RS 4
 This defines what command-line tool is used to create file copies.
 .RS 0
-Possible values: \fBcp\fR, \fBrsync\fR
+Possible values: \fBcp\fR, \fBrsync\fR, \fBcustom: [command]\fR
 .RE
 .RS 0
 cp is less CPU-intensive, and generally faster than rsync, which is still 
 available for historic reasons.
+.RE
+.RS 0
+"custom" is used to specify a custom command. Greyhole will send as
+arguments the source and destination filenames to the command after colon.
+The custom command is responsible for copying the source file to the specified
+destination while preserving the timestamp.
+.RE
+.RS 0
+See /usr/share/greyhole/greyhole-custom-cp.sh for an example.
 .RE
 .RS 0
 Default is \fBcp\fR.
