--- a/docs/greyhole.1
+++ b/docs/greyhole.1
@@ -78,7 +78,7 @@ will be displayed.
 .TP
 \-n, \-\-going[=path]
 Tell Greyhole that you want to remove a drive. Greyhole will
-then make sure you don't loose any files, and that the correct
+then make sure you don't lose any files, and that the correct
 number of file copies are created to replace the missing drive. 
 If you don't supply an option, the available options (paths) 
 will be displayed.
