Fixing broken and/or deprecated links in manual, INSTALL or logs Fixes #166

--- a/docs/greyhole.conf.5
+++ b/docs/greyhole.conf.5
@@ -211,7 +211,7 @@ Define the first group on the same line as \fBdrive_selection_groups\fR, and oth
 .PP
 If you ommit any storage pool drive from your groups, this drive will NOT be used by Greyhole!
 .PP
-See \fIhttp://greyhole.net/wiki/drive_selection_groups\fR on how we suggest you use this feature.
+See \fIhttps://github.com/gboudreau/Greyhole/wiki/SuggestedStorageSelectionAlgorithmUsage\fR on how we suggest you use this feature.
 .PP
 Examples: \fIdrive_selection_groups = OK: /mnt/hdd0/gh, /mnt/hdd2/gh\fR
 .RS 35
