--- a/INSTALL
+++ b/INSTALL
@@ -2,7 +2,7 @@ Greyhole Installation Instructions
 ==================================
 
 Greyhole comes as RPM or DEB packages. If your distribution supports those, you should definitely install one of them.
-They are available from http://greyhole.net/download/
+They are available from https://www.greyhole.net/download/
 Once you did, look in /usr/share/greyhole/USAGE (or online https://raw.github.com/gboudreau/Greyhole/master/USAGE) for configuration instructions.
 If you can't install a pre-packaged version, follow the steps below to install from source.
 
@@ -28,7 +28,7 @@ Note: Samba 3.4.3 (and 3.3.9) fix a bug that affects Greyhole functionnality.
 
 2. Install Greyhole (as root):
 
-	Get the latest Source Install TGZ from http://greyhole.net/download/
+	Get the latest Source Install TGZ from https://github.com/gboudreau/Greyhole/releases
 
 	tar zxf greyhole-*.tar.gz
 	cd greyhole-*
