Bugfix: Stop using open_basedir directive, which is causing weird issues with random users
We'll be using the /usr/bin/greyhole-php shell script instead of using the /usr/bin/php executable.
That script will define a PHPRC environment variable (set to /usr/share/greyhole/php.ini) so that if users want to customize their php.ini for Greyhole, they can make a copy of their php.ini there, and modify that file. Voilà!

--- a/INSTALL
+++ b/INSTALL
@@ -39,6 +39,7 @@ Note: Samba 3.4.3 (and 3.3.9) fix a bug that affects Greyhole functionnality.
 	install -m 0755 -D -p initd_script.sh /etc/init.d/greyhole
 	install -m 0755 -D -p greyhole /usr/bin
 	install -m 0755 -D -p greyhole-dfree /usr/bin
+	install -m 0755 -D -p greyhole-php /usr/bin
 	install -m 0755 -D -p greyhole-dfree.php /usr/share/greyhole
 	install -m 0755 -D -p greyhole-custom-cp.sh /usr/share/greyhole
 	install -m 0644 -D -p logrotate.greyhole /etc/logrotate.d/greyhole
